Fixed button, final gif & better responsive

--- a/web/public/css/style.less
+++ b/web/public/css/style.less
@@ -56,7 +56,8 @@ a {
 
       position: relative;
       height: 73px;
-      width: 224px;
+
+      display: table;
 
       margin-left: auto;
       margin-right: auto;
@@ -67,6 +68,9 @@ a {
 
         margin-left: auto;
         margin-right: auto;
+
+        transform: translate(-50%, 0%);
+        min-width: 280px;
 
         display: table;
         background-color: @dark;
