--- a/web/views/index.pug
+++ b/web/views/index.pug
@@ -2,7 +2,7 @@ html
     head
         title='ConnectFourBot'
         link(rel='stylesheet' href='/css/style.css')
-        meta(name="viewport" content="width=device-width, initial-scale=1.0")
+        meta(name="viewport" content="width=device-width, initial-scale=0.7")
     body
         div.container
             div.bot
@@ -14,7 +14,7 @@ html
                     img(src='/images/example.gif')
                 div.button-container
                     a.button(href="https://discordapp.com/oauth2/authorize?client_id=" + bot_id + "&scope=bot" target='_blank')
-                        label='add to your server'
+                        label='add to your discord server'
                 div.join-us
                     a='Or join our server '
                     a(href='https://darkaqua.net' target='_blank')='darkaqua'
