--- a/web/views/index.pug
+++ b/web/views/index.pug
@@ -1,6 +1,9 @@
 html
     head
         title='ConnectFourBot'
+        link(rel="shortcut icon" href="./favicon.ico" type="image/x-icon")
+        link(rel="icon" href="./favicon.ico" type="image/x-icon")
+
         link(rel='stylesheet' href='/css/style.css')
         meta(name="viewport" content="width=device-width, initial-scale=0.7")
     body
