Some improvements in the web and ready event

--- a/web/public/css/style.less
+++ b/web/public/css/style.less
@@ -44,6 +44,14 @@ a {
       margin-right: auto;
 
       text-align: center;
+
+      h2{
+        margin-bottom: 0;
+      }
+      label{
+        text-align: center;
+        color: #99AAB5;
+      }
     }
 
     .example{
