--- a/web/views/index.pug
+++ b/web/views/index.pug
@@ -13,12 +13,13 @@ html
                     img(src='/images/bot_avatar.png')
                 div.name
                     h2='ConnectFourBot'
+                    label='Currently playing in ' + current_guilds + ' discord servers'
                 div.example
                     img(src='/images/example.gif')
                 div.button-container
                     a.button(href="https://discordapp.com/oauth2/authorize?client_id=" + bot_id + "&scope=bot" target='_blank')
                         label='add to your discord server'
                 div.join-us
-                    a='Or join our server '
+                    a='Or join our discord server '
                     a(href='https://darkaqua.net' target='_blank')='darkaqua'
                     a=' (spanish only)'
