--- a/web/views/index.pug
+++ b/web/views/index.pug
@@ -22,4 +22,8 @@ html
                 div.join-us
                     a='Or join our discord server '
                     a(href='https://darkaqua.net' target='_blank')='darkaqua'
-                    a=' (spanish only)'
+                    a=' (spanish only).'
+                div.bugs
+                    a='If you find a bug, report it on '
+                    a(href='https://github.com/darkaqua/connectfour-bot/issues')='github'
+                    a='.'
