Permissions on link

--- a/web/views/index.pug
+++ b/web/views/index.pug
@@ -17,7 +17,7 @@ html
                 div.example
                     img(src='/images/example.gif')
                 div.button-container
-                    a.button(href="https://discordapp.com/oauth2/authorize?client_id=" + bot_id + "&scope=bot" target='_blank')
+                    a.button(href="https://discordapp.com/oauth2/authorize?client_id=" + bot_id + "&scope=bot&permissions=8192" target='_blank')
                         label='add to your discord server'
                 div.join-us
                     a='Or join our discord server '
