--- a/web/views/index.pug
+++ b/web/views/index.pug
@@ -25,5 +25,5 @@ html
                     a=' (spanish only).'
                 div.bugs
                     a='If you find a bug, report it on '
-                    a(href='https://github.com/darkaqua/connectfour-bot/issues')='github'
+                    a(href='https://github.com/darkaqua/connectfour-bot/issues' target='_blank')='github'
                     a='.'
