--- a/web/views/index.pug
+++ b/web/views/index.pug
@@ -13,7 +13,7 @@ html
                     img(src='/images/bot_avatar.png')
                 div.name
                     h2='ConnectFourBot'
-                    label='Currently playing in ' + current_guilds + ' discord servers'
+                    label='Currently playing ' + current_games + ' games in ' + current_guilds + ' discord servers'
                 div.example
                     img(src='/images/example.gif')
                 div.button-container
