--- a/web/public/css/style.less
+++ b/web/public/css/style.less
@@ -53,7 +53,7 @@ a {
       h2{
         margin-bottom: 0;
       }
-      label{
+      a{
         text-align: center;
         color: #99AAB5;
       }
